# voyage

./: .gitignore  .gitmodules  ARCHITECTURE.org  CMakeLists.txt  DESIGN.org  NOTES.org  TODO.org
CMake/: GTest.cmake
protobuf/: CMakeLists.txt  animation.proto  atlasTextures.proto  graphics.proto  mesh.proto  scene.proto  shader.proto  texture_atlas.proto  tilemap.proto  voyage.proto
python-utils/world_generation/: GameLevel.py  gen2.py  generate_level.py  generator.py  graphUtils.py  levelGen.py  procWorld.py  settings.py  test.fbx  test.py  test2.py
python-utils/world_generation/exporters/: FbxExporter.py
python-utils/world_generation/generators/: CorridorGenerator.py  RoomGenerator.py  TextureGenerator.py
python-utils/world_generation/utils/: geometryUtils.py  graphUtils.py  utils_voronoi.py
resources/datasets/: test.db
resources/graphics/: Human Low Poly.blend  Human Low Poly.blend1  Human Low Poly_BVH_RIGGED.blend  Human Low Poly_BVH_RIGGED.blend1  Human Low Poly_BVH_RIGGED2.blend  Human Low Poly_BVH_RIGGED2.blend1  character.ktx
resources/scripts/: test.py
src/: CMakeLists.txt  main_client.cpp  main_server.cpp  voyage.cpp
src/clientEngine/: CMakeLists.txt  ClientDataHandler.hpp  ClientEngine.cpp  ClientEngine.hpp  ClientLoginHandler.hpp  ClientTileMap.cpp  ClientTileMap.hpp  GameClient.cpp  GameClient.hpp  PlayerData.hpp  TileMap.cpp  TileMap.hpp
src/clientEngine/handlers/: ClientCustomHandler.hpp  ClientEntitySpawnHandler.hpp  ClientEntityUpdateHandler.hpp  ClientLoginHandler.hpp  ClientMapHandler.hpp  ClientWorldStateHandler.hpp
src/clients/: GameClient.hpp  main_client.cpp  voyage3d.cpp  voyage_net.cpp
src/common/: CMakeLists.txt  GameMessages.hpp  Generic.cpp  handlers.hpp  math.hpp
src/components/: AnimationComponent.hpp  BodyCmp.cpp  BodyCmp.hpp  BodyComponent.cpp  BodyComponent.hpp  BulletCmp.hpp  BulletComponent.hpp  CMakeLists.txt  ClientPlayerSystem.hpp  CollisionComponent.cpp  CollisionComponent.hpp  EntityInputSystem.hpp  EntityNetworkSystem.hpp  GraphicsCmp.hpp  GraphicsComponent.hpp  InputCmp.hpp  InventoryComponent.hpp  MapCmp.hpp  ObjectStateSystem.hpp  ParticleComponent.cpp  ParticleComponent.hpp  PlayerComponent.cpp  PlayerComponent.hpp  PlayerSystem.cpp  PlayerSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  ServerPlayerSystem.hpp  VisibilityComponent.hpp  WeaponSystem.cpp  WeaponSystem.hpp  components.hpp
src/database/: CMakeLists.txt  CMakelists.txt  ClientDatabaseCacher.hpp  DatabaseConnection.cpp  DatabaseConnection.hpp  DatabaseConnectionPool.hpp  DatabaseResult.cpp  DatabaseResult.hpp
src/entities/: CMakeLists.txt  Component.hpp  ComponentPool.hpp  Entity.cpp  Entity.hpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  System.cpp  System.hpp
src/game/: CMakeLists.txt  CollisionManager.cpp  CollisionManager.hpp  GameEngine.cpp  GameEngine.hpp  GameLevel.cpp  GameLevel.hpp  GameMap.cpp  GameMap.hpp  MapRegion.hpp  TileMap.cpp  TileMap.hpp  World.cpp  World.hpp  WorldProperties.hpp
src/graphics/: CMakeLists.txt  GraphicsSystem.cpp  GraphicsSystem.h
src/graphics/Gui/: CMakeLists.txt  ConsoleWindow.hpp  DescriptionWindow.cpp  DescriptionWindow.hpp  Gui.cpp  Gui.hpp
src/graphics/SDL/: ImguiInterface.cpp  ImguiInterface.hpp  SDLGraphicsEngine.cpp  SDLGraphicsEngine.hpp  SDLInputEngine.cpp  SDLInputEngine.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TileMap.cpp  TileMap.hpp  TileMapLayer.cpp  TileMapLayer.hpp  textureAtlas.cpp
src/networking/: #DESIGN.org#  CMakeLists.txt  ClientDataHandler.hpp  ClientLoginHandler.hpp  ClientNetworkManager.cpp  ClientNetworkManager.hpp  DESIGN.org  Messages.hpp  NetworkManager.hpp  NetworkMessagePool.hpp  PacketHandler.hpp  ServerDataHandler.hpp  ServerLoginHandler.hpp  ServerNetworkManager.cpp  ServerNetworkManager.hpp  Session.hpp  TaskPool.hpp
src/protobuf/: CMakeLists.txt  database.proto  voyage.proto
src/scripts/: CMakeLists.txt  ScriptContext.hpp  ScriptEngine.cpp  ScriptEngine.hpp  SriptEngine.hpp  scriptEngineTest.cpp
src/serverEngine/: CMakeLists.txt  GameServer.cpp  GameServer.hpp  MessageFactory.hpp  PlayerSession.cpp  PlayerSession.hpp  ServerEngine.cpp  ServerEngine.hpp
src/serverEngine/handlers/: ServerDataHandler.cpp  ServerDataHandler.hpp  ServerLoginHandler.cpp  ServerLoginHandler.hpp  ServerMapHandler.cpp  ServerMapHandler.hpp  handlers.hpp
src/serverEngine/messages/: DescriptionMessage.hpp  FormattedMessage.hpp  messages.hpp
src/sql/: DatabaseConnectionPool.cpp  databaseTest.cpp
src/tools/: CMakeLists.txt  fbx_loader.cpp  fbx_loader.hpp  fbx_view.cpp  fbx_view_app.cpp
src/utils/: CMakeLists.txt  CMakeListst.txt  FbxLoader.cpp  FbxLoader.hpp  GeometryUtils.cpp  GeometryUtils.cpp.orig  GeometryUtils.hpp  GeometryUtils.hpp.orig  Interval.hpp  PlayerInput.cpp  PlayerInput.hpp  Reader.hpp
src/visibility/: CMakeLists.txt  Floats.hpp  Primitives.hpp  Vector.hpp  Visibility.cpp  Visibility.hpp  VisibilityManager.cpp  VisibilityManager.hpp
test/: CMakeLists.txt  test_Entity.cpp
