add_library(graphics SHARED
  GraphicsSystem.h
  GraphicsSystem.cpp
  BaseSystem.h
  BaseSystem.cpp
  GameEntity.h
  GameState.h
  InputListeners.h
  MainEntryPointHelper.h
  SdlInputHandler.h
  SdlInputHandler.cpp
  GameEntityManager.h
  GameEntityManager.cpp
  Threading/MessageQueueSystem.h
  Threading/MessageQueueSystem.cpp)
  